[gd_scene load_steps=13 format=2]

[ext_resource path="res://Images/LaserGenerator/Generator_n.png" type="Texture" id=1]
[ext_resource path="res://Images/LaserGenerator/Generator.png" type="Texture" id=2]
[ext_resource path="res://Images/Portal_n.png" type="Texture" id=3]
[ext_resource path="res://Images/LightDifuse.png" type="Texture" id=4]
[ext_resource path="res://Images/Particle.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Enemies/LaserGenerator/Generator.gd" type="Script" id=6]
[ext_resource path="res://Images/Portal.png" type="Texture" id=7]
[ext_resource path="res://Audio/SoundEffects/PowerDown.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/SoundEffects/Generator.ogg" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 101.249

[sub_resource type="Animation" id=2]
resource_name = "Running"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LightSprite:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1.2, 1.1, 1.1, 1 ), Color( 1.4, 1.15, 1.15, 1 ), Color( 1.2, 1.1, 1.1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UnderLight:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1.2, 1.1, 1.1, 1 ), Color( 1.4, 1.15, 1.15, 1 ), Color( 1.2, 1.1, 1.1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 119.443

[node name="Generator" type="StaticBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 16
collision_mask = 15
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="UnderLight" type="Sprite" parent="."]
modulate = Color( 0.901961, 0.2, 0.2, 1 )
self_modulate = Color( 1.2, 1.1, 1.1, 1 )
scale = Vector2( 1.35355, 1.34295 )
texture = ExtResource( 5 )
normal_map = ExtResource( 3 )

[node name="GeneratorSprite" type="Sprite" parent="."]
modulate = Color( 0.101961, 0.101961, 0.109804, 1 )
texture = ExtResource( 2 )
normal_map = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -542.33, -540.351 )
texture = ExtResource( 4 )
offset = Vector2( 542.33, 540.351 )
color = Color( 0.901961, 0.2, 0.2, 1 )
energy = 0.5

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 540.344, 0.456665 )
texture = ExtResource( 4 )
offset = Vector2( -540.344, -0.456665 )
color = Color( 0.901961, 0.2, 0.2, 1 )
energy = 0.5

[node name="LightSprite" type="Sprite" parent="."]
modulate = Color( 0.901961, 0.2, 0.2, 1 )
self_modulate = Color( 1.2, 1.1, 1.1, 1 )
scale = Vector2( 0.387224, 0.387224 )
texture = ExtResource( 7 )
normal_map = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Running"
anims/Running = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="HitboxArea2D" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea2D"]
visible = false
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="RunningSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true
bus = "SoundEffects"

[node name="PowerDownSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
pitch_scale = 0.6
bus = "SoundEffects"

[connection signal="area_entered" from="HitboxArea2D" to="." method="_on_HitboxArea2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
